styling: styling tweaks, fixed layout issues with navbar and logout menu item, added hamburger menu icon

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,6 +15,8 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 60px 0;
+    max-width: 900px;
+    margin: 0 auto;
 
     &-login {
       a {
